testsuite/keen.dg/grammar-001.c
// { dg-do compile }

long int;  // { dg-error "invalid" }


